    systems).  (robs)
  o New bitrate, time in seconds, & total options for soxi; bitrate
    and file-size display for sox.  (robs)
  o `Magic' (libmagic) file type detection now selected using `--magic'
    option (where supported).
  o [2003121] In many cases, no longer need to specify -t when inputing
    audio from a `pipe'.  (robs)
  o Support Shoutcast more URL variants.  (robs)

Other bug fixes:

  o Fix [2262177] SoX build could fail with parse /etc/issue error.  (robs)
  o Fix "no handler for detected file type `application/octet-stream;
    charset=binary'" with raw files when using libmagic.  (robs)

Internal improvements:

  o Rationalise use of and make repeatable across different platforms
    pseudo random number generators.  (robs)
  o Rationalise effects' options interface (getopt compatible).  (robs)
  o Added stub headers to allow test compilation of all sources on
    linux.  (robs)


sox-14.2.0	2008-11-09
----------

Previously deprecated features that have been removed in this release:

  Deprec-  Feature    [O(ption)]
  ated in  [F(ormat)] [E(ffect)]   Replacement
  -------  ----------------------  ----------------------
  14.0.0   E pitch                 new pitch = old key

File formats:

  o New `.cvu' unfiltered CVSD; supports any bit-rate.  (robs)
  o New `.sox' native format intended for intermediate files.  (robs)
  o Fix WAV write on 64-bit arch.  (robs)
  o Fix writing PRC ADPCM files.  (Silas Brown)
  o Fix problems reading short mp3 files.  (robs)

Effects:

  o N.B. Reduced default bandwidth setting for `rate' effect from 99%
    to 95%; use `rate -s' to be compatible with SoX v14.1.0.  (robs)
  o New options for `rate' effect to configure phase response,
    band-width and aliasing.  (robs)
  o New options for 'dither' effect: RPDF, TPDF, noise-shaping.  (robs)
  o New `riaa' effect: RIAA vinyl playback EQ.  (robs)
  o New `loudness' effect: gain control with ISO 226 loudness
    compensation.  (robs)