@@ -74,6 +74,8 @@ add_executable(example1 example1.c)
 target_link_libraries(example1 lib${PROJECT_NAME} lpc10 ${optional_libs})
 add_executable(example2 example2.c)
 target_link_libraries(example2 lib${PROJECT_NAME} lpc10 ${optional_libs})
+add_executable(example3 example3.c)
+target_link_libraries(example3 lib${PROJECT_NAME} lpc10 ${optional_libs})
 find_program(LN ln)
 if (LN)
   add_custom_target(rec ALL ${LN} -sf sox rec DEPENDS sox)
